--- a/MyET/MyET.Android/MyET.Android.csproj
+++ b/MyET/MyET.Android/MyET.Android.csproj
@@ -137,5 +137,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\rip.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\drag_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\swipe_up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\double_tap.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
