--- a/MyET/MyET.Android/MyET.Android.csproj
+++ b/MyET/MyET.Android/MyET.Android.csproj
@@ -84,9 +84,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\alien_green.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\MyET\MyET.csproj">
       <Project>{1D3914F6-95A1-4F56-8029-78A0A9833B32}</Project>
       <Name>MyET</Name>
@@ -120,16 +117,16 @@
     <AndroidResource Include="Resources\drawable\earth.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\alien_sad.png" />
+    <AndroidResource Include="Resources\drawable\alien_sad_green.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bg.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\alien_happy.png" />
+    <AndroidResource Include="Resources\drawable\alien_happy_green.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\alien_neutral.png" />
+    <AndroidResource Include="Resources\drawable\alien_neutral_green.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\help.png" />
@@ -145,6 +142,27 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\double_tap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_happy_blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_happy_red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_neutral_blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_neutral_red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_sad_blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alien_sad_red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\edit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
